<resources>
    <string name="app_name">AboutME</string>
    <string name="name">Arsh</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="what_is_your_name">What is ur name</string>
    <string name="done">Done</string>
    <string name="bio">"Hi, my name is Aleks. love fish.   The kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
        NEW LINE  Fun fact is that I have several aquariums and also a river.
        I like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.  And sometimes I even go fishing.  And even less sometimes, I actually catch something.   Once, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.   I'll be happy to teach you how to make your own aquarium.  You should ask someone else about fishing, though.  "</string>
</resources>